fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -1,9 +1,9 @@
-.gallery{
+/* .gallery{
     display: flex;
     flex-flow: row wrap;
   }
-  
-/* .gallery img{
+   */
+.gallery img{
     border-radius: 1vw;
     border: 1vw solid #36a66863;
-  }  */
+  } 
